<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ui.InsideGroupFragment">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:src="@drawable/dots_loading"
    android:layout_margin="16dp"
    android:padding="8dp"
    android:id="@+id/imgInfo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        app:layout_constraintTop_toBottomOf="@id/imgInfo"
        android:id="@+id/view"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:id="@+id/cardChallengeGroup"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:background="#9C000000"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/challenge"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            />
        <TextView
            android:id="@+id/txtChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yoga Challenge "
            android:layout_margin="16dp"
            android:textSize="20sp"
            android:elevation="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtChallenge"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txtLink1"
            android:layout_margin="16dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:text="@string/link1"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtLink1"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtLink2"
                android:layout_margin="16dp"
                android:autoLink="web"
                android:textColor="@color/white"
                android:text="@string/link2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtLink2"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtLink3"
                android:layout_margin="16dp"
                android:autoLink="web"
                android:textColor="@color/white"
                android:text="@string/link3"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardChallengeGroup"
        android:id="@+id/cardChallengeGroup2"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:background="#9C000000"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/challenge"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                />
            <TextView
                android:id="@+id/txtChallenge2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leg Challenge "
                android:layout_margin="16dp"
                android:textSize="20sp"
                android:elevation="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtChallenge2"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtLink4"
                android:layout_margin="16dp"
                android:autoLink="web"
                android:textColor="@color/white"
                android:text="@string/link4"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txtLink4"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txtLink5"
                android:layout_margin="16dp"
                android:autoLink="web"
                android:textColor="@color/white"
                android:text="@string/link5"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>