<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".ui.auth.LoginFragment"
    android:layout_gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_grey"
        android:elevation="0dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:icon="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:iconTint="@color/white"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:letterSpacing=".12"
        android:text="Welcome Back!"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintVertical_bias="0.16" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNameContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:background="@color/dark_grey"
        android:hint="@string/username"
        app:boxStrokeColor="#4F4F4F"
        app:hintTextColor="#4F4F4F"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColorHint="#4F4F4F"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:drawableEnd="@drawable/profile_icone"
            android:textColor="@color/white"
            android:textColorHint="#4F4F4F"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:background="@color/dark_grey"
        android:hint="@string/password"
        app:boxStrokeColor="#4F4F4F"
        app:endIconMode="password_toggle"
        app:endIconTint="#4F4F4F"
        app:hintTextColor="#4F4F4F"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameContainer"
        android:textColorHint="#4F4F4F">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#4F4F4F"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordContainer"
        app:backgroundTint="@null"
        android:background="@drawable/button_auth_style"
        android:padding="8dp"
        android:layout_margin="32dp"
        android:text="login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>